@@ -1,3 +1,9 @@
+Sun Feb 22 00:00:04 2009  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: clip slopefield solutions to within the plot window.
+	  to avoid unsightly overshooting lines when step size is too large
+	  (or when slope is too large)
+
 Sat Feb 21 03:12:36 2009  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/graphing.c: after ps/eps export queue draw on the plot canvas
